# Spyke_BlockChain_Temp2.0

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.6BC2BA3BEB1BE7FC.idx  node.cpp.64470BE7C3CB0122.idx  node.h.584705F8CE039093.idx
include/node/: connection.h  node.h  node_connection_manager.h  node_connections_manager.h  node_settings.h  signal_handling.h  socket_helper.h
node/: connection.cpp  node.cpp  node_connection_manager.cpp  node_connections_manager.cpp  signal_handling.cpp  socket_helper.cpp
tests/: CMakeLists.txt  main.cpp
tests/node/: CMakeLists.txt  main.cpp
